[tool.poetry]
name = "presto-env"
version = "0.1.0"
description = ""
authors = ["David Mack <davidhughhenrymack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
pytest = "^8.3.3"
flake8 = "^7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
