[tool.poetry]
name = "presto-env"
version = "0.1.0"
description = ""
authors = ["David Mack <davidhughhenrymack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^1.17"
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[tool.poetry.scripts]
test = "pytest"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
