[tool.poetry]
name = "presto-env"
version = "0.1.0"
description = "A Python environment management tool for Presto projects"
authors = ["David Mack <davidhughhenrymack@gmail.com>"]
readme = "README.md"
homepage = "https://prestodesign.ai"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^1.17"
pytest = "^8.3.3"
flake8 = "^7.1.1"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
